--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="hobby-5">
             <dt>ツーリング</dt>
-            <dd>山口県はバイクが盛んでです！KTMの250ccに乗っています！</dd>  
+            <dd>山口県はバイクが盛んです！KTMの250ccに乗っています！</dd>  
           </div>
           <div class="hobby-6">
             <dt>旅行</dt>
@@ -147,7 +147,7 @@
 
         <div class="memory-3">
           <h3>中央消防署配属(1〜5年目)</h3>
-          <p>　消防学校卒業後は光消防に戻り、中央消防署という出動メインの部署に配属されました。当時の直属の上司が「現場での判断力を身につけるために自分で調べ判断する力の育成」に重きを置かれていたため、すべて丁寧に教えてもらえるわけではないことに学生と社会人の違いを痛感しました。最初は困惑しましたが今ではこの力にとても助けられているため、この力の重要性が身に染みています。</p>
+          <p>　消防学校卒業後は光消防に戻り、中央消防署という出動メインの部署に配属されました。当時の上司が「現場での判断力を身につけるために自分で調べ判断する力の育成」に重きを置かれていたため、すべて丁寧に教えてもらえるわけではないことに学生と社会人の違いを痛感しました。最初は困惑しましたが今ではこの力にとても助けられているため、この力の重要性が身に染みています。</p>
           <h4>[業務内容]</h4>
           <ul>
             <li>消防隊、救急隊での出動</li>
