--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <li>連携力</li>
             <li>ユーザー目線での考え方</li>
           </ul>
-          <p>　<a href="#Memory">Memory</a>部分と被る部分が多々あります、申し訳ありません。<br>
+          <p>　<a href="#Memory">Memory</a>と被る部分が多々あります、申し訳ありません。<br>
           　高校時代から現在まで厳しい環境に身を置くことが多かったため、根性には自信があります。ただ闇雲に頑張るだけでなく、業務の目的や根拠を意識してより効率的な遂行方法を模索しながら業務にあたることができます。<br>
           　対人能力や自走能力は、中央消防署</a>や通信指令室勤務の部分でもアピールさせていただきましたが、現場活動、通報対応、業者との連携の際に鍛えられたと感じています。また、1年目の上司の教えを今でも意識しており、自身で調べ実行することを癖付けています。<br>
           　私は決して物覚えが良いわけではありません。学んだことを忘れることも多々あります。しかし、それを自覚しているため、忘れてもすぐに引き出せるように資料化して保存する、インデックスをつけておく、メモしておくなどの対策を取ることができます。<br>
