--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
         <dl>
           <div class="hobby-1">
             <dt>野球</dt>
-            <dd>職場の先輩と草野球をやっています！</dd>  
+            <dd>職場の先輩と草野球をやっています。</dd>  
           </div>
           <div class="hobby-2">
             <dt>スノボ</dt>
-            <dd>職場の後輩に誘われてハマりました笑</dd>  
+            <dd>職場の後輩に誘われて始めました。</dd>  
           </div>
           <div class="hobby-3">
             <dt>キャンプ</dt>
-            <dd>中高の友達と年に数回行っています！</dd>  
+            <dd>中高の友達と年に数回行っています。</dd>  
           </div>
           <div class="hobby-4">
             <dt>ゲーム</dt>
-            <dd>APEX、CODなどをやっています！</dd>  
+            <dd>APEX、CODなどをやっています。</dd>  
           </div>
           <div class="hobby-5">
             <dt>ツーリング</dt>
-            <dd>山口県はバイクが盛んです！KTMの250ccに乗っています！</dd>  
+            <dd>山口県はバイクが盛んです。KTMの250ccに乗っています。</dd>  
           </div>
           <div class="hobby-6">
             <dt>旅行</dt>
-            <dd>コロナ前は車で3泊4日の九州一周旅行をしました！他にも東京や大阪にも行きました！</dd>  
+            <dd>コロナ前は車で3泊4日の九州一周旅行をしました。他に東京や大阪にも行きました。</dd>  
           </div>
         </ul>
       </section>
